Set package version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ endif(dpkg_path)
 set(CPACK_PACKAGE_NAME "sshping")
 set(CPACK_PACKAGE_CONTACT "spook@MisfitMountain.org")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "sshping is an SSH-based ping-like utility that measures interactive character echo latency and file transfer throughput.")
-
+SET(CPACK_PACKAGE_VERSION_MAJOR "0")
+SET(CPACK_PACKAGE_VERSION_MINOR "1")
+SET(CPACK_PACKAGE_VERSION_PATCH "3")
 include(CPack)
 
