Build man pages with CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,46 @@
+# See https://github.com/spook/sshping
 project(sshping)
 cmake_minimum_required(VERSION 2.8)
 
 #find_package(libssh)
 
-#set(CMAKE_CXX_FLAGS "-I ../ext/ -std=c++11 -O3 -Werror -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wold-style-cast -Wcast-align -Wunused -Wcast-qual -Woverloaded-virtual -Wconversion -Wsign-conversion -Wformat-security -Wwrite-strings -fdiagnostics-show-option")
+# Build the sshping binary
 set(CMAKE_CXX_FLAGS "-I ../ext/ -Wall")
-
 add_executable(${PROJECT_NAME} src/sshping.cxx)
-
 target_link_libraries(${PROJECT_NAME} ssh)
+install(TARGETS ${PROJECT_NAME} DESTINATION bin CONFIGURATIONS Release)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+# man Pages
+find_program(P2M NAMES pod2man pod2man.pl)
+if (P2M)
+    message(STATUS "pod2man found, Use the 'man' target to build")
+endif (P2M)
+set(DOC_DIR  ${CMAKE_SOURCE_DIR}/doc)
+set(P2M_OPTS -c "ssh-based ping test utility" -d 2018-03-13 -r v0.1.3)
+set(MAN_SRC  ${DOC_DIR}/sshping.pod)
+set(MAN_TGT  ${DOC_DIR}/sshping.8)
+add_custom_command(
+    OUTPUT  ${MAN_TGT}
+    COMMAND ${P2M} ${P2M_OPTS} ${MAN_SRC} ${MAN_TGT}
+    DEPENDS ${MAN_SRC}
+    WORKING_DIRECTORY ${DOC_DIR}
+    COMMENT "Building manpage ${MAN_TGT}"
+    VERBATIM)
+add_custom_target(man ALL DEPENDS ${MAN_TGT})
+install(FILES ${MAN_TGT} DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man8)
 
+# Packaging for RPM or DEB
 find_program(rpmbuild_path "rpmbuild" FALSE)
 if (rpmbuild_path)
   message(STATUS "rpmbuild found, enabling RPM for the 'package' target")
   list(APPEND CPACK_GENERATOR RPM)
-endif(rpmbuild_path)
+endif (rpmbuild_path)
 
 find_program(dpkg_path "dpkg" FALSE)
 if (dpkg_path)
   message(STATUS "dpkg found, enabling DEB for the 'package' target")
   list(APPEND CPACK_GENERATOR DEB)
-endif(dpkg_path)
+endif (dpkg_path)
 
 set(CPACK_PACKAGE_NAME "sshping")
 set(CPACK_PACKAGE_CONTACT "spook@MisfitMountain.org")
